--- a/src/web-console/assets/styles/reset.css
+++ b/src/web-console/assets/styles/reset.css
@@ -31,3 +31,20 @@ a, a:focus, a:hover {
 	color: inherit;
 	text-decoration: none;
 }
+
+/* el-scrollbar */
+.scrollbar-wrapper {
+	overflow-x: hidden !important;
+}
+
+.el-scrollbar__view {
+	min-height: 100%;
+}
+
+.el-scrollbar__bar.is-vertical {
+	 right: 0;
+}
+
+.el-scrollbar__bar.is-horizontal {
+	 display: none;
+}
